# 12

5/: gener.py
HW_1/help_bot/: help_bot.py  note.py  notes_class.py
Relation_db/: main.py
leiciya_2/docker/bot/: pyproject.toml
leiciya_2/logger/: pyproject.toml
leiciya_2/logger/logger/: help_bot.py  log.py  my_logger.py  test.py
